# product-search-service/src/main/java/com/konkon/onlinestore/product/search/service/application/rest/resource/ReviewResource.java
@@ -7,16 +7,17 @@ import com.konkon.onlinestore.product.search.service.application.rest.model.requ
 import com.konkon.onlinestore.product.search.service.application.rest.model.response.ReviewResponse;
 import com.konkon.onlinestore.product.search.service.domain.usecase.ReviewUseCase;
 import com.konkon.onlinestore.product.search.service.utils.annotation.UUIDConstraint;
-import com.oracle.svm.core.annotate.Delete;
 import io.smallrye.mutiny.Uni;
 import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
+import org.jboss.resteasy.reactive.ResponseStatus;
 
 import javax.validation.Valid;
+import javax.ws.rs.DELETE;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 import java.util.UUID;
 
@@ -32,24 +33,27 @@ public class ReviewResource {
     }
 
     @POST
+    @ResponseStatus(201)
     @Produces(MediaType.APPLICATION_JSON)
     public Uni<ReviewResponse> createReview(@Valid @RequestBody CreateReviewRequest request) {
         return reviewUseCase.createProduct(reviewConverter.toDomain(request))
                 .onItem().transform(reviewConverter::toResponse);
     }
 
-    @Delete
+    @DELETE
     @Path("{reviewId}")
+    @ResponseStatus(204)
     @Produces(MediaType.APPLICATION_JSON)
-    public Uni<Boolean> deleteReview(@UUIDConstraint @QueryParam("reviewId") String reviewId) {
+    public Uni<Boolean> deleteReview(@UUIDConstraint @PathParam("reviewId") String reviewId) {
         return reviewUseCase.deleteProduct(UUID.fromString(reviewId));
     }
 
     @PUT
     @Path("{reviewId}")
+    @ResponseStatus(204)
     @Produces(MediaType.APPLICATION_JSON)
     public Uni<Boolean> updateReview(
-            @UUIDConstraint @QueryParam("reviewId") String reviewId,
+            @UUIDConstraint @PathParam("reviewId") String reviewId,
             @Valid @RequestBody UpdateReviewRequest request) {
         return reviewUseCase.updateProduct(
                 reviewConverter.toDomain(UUID.fromString(reviewId), request));
